[package]
name = "ri2p"
description = "Rust implementation of the i2p client/server/router protocols"
version = "0.1.0"
license-file = "LICENSE.md"
authors = ["AUTHORS.md"]
readme = "README.md"
edition = "2021"
homepage = "https://github.com/ChristopherBilg/ri2p"
repository = "https://github.com/ChristopherBilg/ri2p"
documentation = "https://chrisbilger.com/ri2p"

[[bin]]
name = "ri2p"

[dependencies]
