[package]
name = "ri2p"
description = "Rust implementation of the i2p client/server/router protocols"
version = "0.1.0"
license-file = "LICENSE.md"
authors = ["AUTHORS.md"]
readme = "README.md"
edition = "2021"
homepage = "https://github.com/ChristopherBilg/ri2p"
repository = "https://github.com/ChristopherBilg/ri2p"
documentation = "https://ri2p.com"

[[bin]]
name = "ri2p"

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = "1.0.136"
serde_derive = "1.0.133"
toml = "0.5.8"
