[package]
name = "ri2p"
description = "Rust implementation of the i2p client/server/router protocols"
version = "0.1.0"
license-file = "LICENSE.md"
authors = ["AUTHORS.md"]
readme = "README.md"
edition = "2021"
homepage = "https://chrisbilger.com/ri2p/"
repository = "https://github.com/ChristopherBilg/ri2p"
documentation = "https://chrisbilger.com/ri2p/"

[[bin]]
name = "ri2p"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = "1.0.139"
serde_derive = "1.0.139"
toml = "0.5.11"
